syntax = "proto3";
package QuoteService.QuoteData;
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "QuoteService.QuoteData";

message OHLC{
    google.protobuf.FloatValue Open = 1;
    google.protobuf.FloatValue High = 2;
    google.protobuf.FloatValue Low = 3;
    float Close = 4;
    int32 Volume = 5;
    int32 TicksCount = 6;
    google.protobuf.Timestamp LocalTime = 7;
    repeated Tick TicksArr = 8;
}

message Center{
    float ArithmeticMean = 1;
    float GeometricMean = 2;
    float HarmonicMean = 3;
    float Median = 4;
    float Mode = 5;
}

message Dispersion{
    float Variance = 1;
    float StandardDeviation = 2;
    float CoefficientVariation = 3;
    float Range = 4;
    float InterquartileRange = 5;
}

message ShapeMoments{
    float Skewness = 1;
    float Kurtosis = 2;
    float LMoments = 3;
}

message DescriptiveStatistics{
    google.protobuf.Timestamp LocalTime = 1;
    Center Center = 2;
    Dispersion Dispersion = 3;
    ShapeMoments ShapeMoments =4;
}


message Tick{
    int32 DealQty = 1;
    float DealPrice = 2; 
    google.protobuf.Timestamp LocalTime = 3;
}